# FastApiCelerity

./: Dockerfile  README.md  docker-compose.yml
app/: captcha_2.py  celery_worker.py  extract.py  main.py  pyproject.toml  read_qr.py
