[tool.poetry]
name = "zendala covid"
version = "0.1.0"
description = "Servicio para validar certificados de vacunacion contra Covid-19"
authors = ["Dante <dante.perez.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
pdfplumber = "^0.5.28"
SpeechRecognition = "^3.8.1"
urllib3 = "^1.26.6"
pydub = "^0.25.1"
undetected-chromedriver = "^3.0.3"
celery = "^5.1.2"
flower = "^1.0.0"
setuptools = "^58.0.4"
wheel = "^0.37.0"
pdf2image = "^1.16.0"
pyzbar = "^0.1.8"
python-multipart = "^0.0.5"
pocketsphinx = "^0.1.15"
Unidecode = "^1.3.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
